--- a/E6/Latex/introduzione.tex
+++ b/E6/Latex/introduzione.tex
@@ -1,12 +1,21 @@
 \section{Introduzione}
 
 L'esperienza consiste nella misura della conduttanza di quattro tubi di diverse lunghezze e diametri.
+La misura si ottiene, mediante due misure di pressione, grazie alla definizione di conduttanza:
+
+\begin{equation}
+    Q = C \cdot \Delta P
+\end{equation}
+
+I valori di conduttanza misurati verranno poi confrontati con i valori calcolati teoricamente.
+Facciamo presente sin da subito che le misure sono state effettuate in regimi di flusso
+differenti.
 
 \section{Materiale utilizzato}
 
 \begin{itemize}
-	\item{Sistema da vuoto costituito da una camera di volume $V = 5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa, una pompa ibrida turbomolecolare-molecular drag connessi in modo opportuno;}
-	\item{Valvola a spillo con regolazione micrometrica;}
-	\item{Multimetro e sistema di acquisizione dati;}
-	\item{2 vacuometri Pirani;}
+    \item{Sistema da vuoto composto da una pompa rotativa, due vacuometri pirani (già tarati) e alcuni tubi di raccordo.}
+    \item{Valvola a spillo a regolazione micrometrica (tarata nelle esperienze precedenti).}
+    \item{Tubi in esame (lunghezza x diametro in millimetri): 8000x4, 800x4, 8000x2.5, 800x2.5}
+    \item{Sistema di acquisizione dati}
 \end{itemize}
