--- a/E5/Latex/introduzione.tex
+++ b/E5/Latex/introduzione.tex
@@ -1,12 +1,12 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza di laboratorio è quello di misurare la velocità di pompaggio delle pompe, rotativa e turbomolecolare, in nostro possesso. Quindi vogliamo ricavare il volume di gas che la pompa riesce ad evacuare dall'impianto da vuoto per unità di tempo.
+Lo scopo di questa esperienza di laboratorio è quello di misurare la velocità di pompaggio delle due pompe, rotativa e turbomolecolare, in nostro possesso. Vogliamo ricavare il volume di gas che la pompa riesce ad evacuare dall'impianto da vuoto per unità di tempo.
 
 \section{Materiale utilizzato}
 
 \begin{itemize}
-	\item{Sistema da vuoto costituito da una camera di volume $V = 5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa, una pompa ibrida turbomolecolare-molecular drag connessi in modo opportuno;}
-	\item{Valvola a spillo con regolazione micrometrica;}
+	\item{Sistema da vuoto costituito da una camera di volume $V = 5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa e una pompa ibrida turbomolecolare-molecular drag connessi in modo opportuno;}
+    \item{Valvola a spillo con regolazione micrometrica (tarata nell'esperienza precedente);}
 	\item{Multimetro e sistema di acquisizione dati;}
-	\item{2 vacuometri Pirani;}
+	\item{2 vacuometri Pirani, uno connesso al fondo della turbo, l'altro alla camera;}
 \end{itemize}
