tanto non leggi

--- a/E5/Latex/Relazione.tex
+++ b/E5/Latex/Relazione.tex
@@ -17,5 +17,12 @@
 \input{title.tex}
 \input{introduzione.tex}
 \input{analisi.tex}
-
+\newpage
+\begin{figure}[b!]
+    \centering
+   \includegraphics[width=16cm]{drawing.pdf}
+   \caption{Schema dell'impianto da noi utilizzato. La pompa primaria è una pompa rotativa, mentre la seconda pompa al centro dello schema è una pompa ibrida turbomolecolare-molecular drag.
+   La pompa turbomolecolare poteva essere isolata dal resto dell'impianto grazie alla valvola gate e alla valvola sul fondo della pompa.}
+   \label{fig:impianto}
+\end{figure}
 \end{document}
