--- a/E5/Latex/analisi.tex
+++ b/E5/Latex/analisi.tex
@@ -1,16 +1,15 @@
 \section{Esecuzione}
 
 L'impianto usato è del tutto analogo a quello costruito nelle esperienze precedenti e presentava
-un bypass utile ad isolare la pompa turbomolecolare dal resto dell'impianto.
+un bypass utile ad isolare la pompa turbomolecolare dal resto dell'impianto. (vedi Figura \ref{fig:impianto})
 
 Poiché la pompa turbomolecolare ha bisogno di una decina di minuti per fermarsi abbiamo cominciato le misure con la pompa rotativa,
-misurando solo in un secondo momento la velocità di pompaggio della turbomolecolare. In questa prima
-fase abbiamo acceso solo la pompa rotativa.
+misurando solo in un secondo momento la velocità di pompaggio della turbomolecolare.
 
-Quindi, per calcolarne la velocità di pompaggio della pompa rotativa, ci siamo mossi come segue:
+In questa prima fase abbiamo acceso solo la pompa rotativa e per calcolarne la velocità di pompaggio della pompa rotativa, ci siamo mossi come segue:
 
 \begin{enumerate}
-	\item{Abbiamo chiuso la valvola gate alla bocca della turbomolecolare, lasciando aperta il fondo,
+	\item{Abbiamo chiuso la valvola gate alla bocca della turbomolecolare, lasciando aperta la valvola al fondo della stessa,
         in modo che anche l'aria all'interno della pompa venisse rimossa. In questo modo abbiamo evitato perdite
         all'interno dell'impianto stesso;}
 	\item{Grazie al bypass abbiamo svuotato tutto l'impianto fino alla pressione limite della pompa rotativa,
@@ -84,7 +83,7 @@ queste discrepanze fra i valori misurati e quelli del manuale, abbiamo ipotizzat
 \input{tab.tex}
 
 \begin{itemize}
-    \item{A basse pressione le pompe non lavorano al massimo della loro velocità di pompaggio poiché i gas sono rarefatti.
+    \item{A basse pressioni le pompe non lavorano al massimo della loro velocità di pompaggio poiché i gas sono rarefatti.
         Questo si può vedere considerando per esempio il grafico della pressione nel tempo di una pompa in funzione:
         la forma è quella di un esponenziale negativo. Man mano che ci si avvicina alla pressione limite, la pompa rimuove
         sempre meno aria per ogni ciclo. Bisogna comunque considerare il fatto che a pressioni più basse la stessa quantità di gas
@@ -98,8 +97,6 @@ queste discrepanze fra i valori misurati e quelli del manuale, abbiamo ipotizzat
         turbomolecolare, non era collegata direttamente alla camera da vuoto, ma era connessa tramite un tubo di
         circa un metro di lunghezza;}
 \end{itemize}
-
-Con queste considerazione
 
 \begin{figure}[h!]
 	\centering
