--- a/E3(bis)/Latex/title.tex
+++ b/E3(bis)/Latex/title.tex
@@ -1,7 +1,7 @@
 \begin{center}
 
 	\vspace{0.5cm}
-     	{\huge Iniziazione al montaggio di un sistema da vuoto.}
+     	{\huge Montaggio di un sistema da vuoto.}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
@@ -14,3 +14,5 @@
     \vspace{0.7cm}
 
 \end{center}
+
+%Ho tolto iniziazione da titolo perchè i nostri cari assistenti di laboratorio non amano l'ironia, come ci hanno fatto notare, maledetti !!!
