--- a/E3/Latex/Relazione.tex
+++ b/E3/Latex/Relazione.tex
@@ -16,7 +16,7 @@
 
 \input{title.tex}
 \input{introduzione.tex}
-\input{apparato.tex}
+%\input{apparato.tex}
 %\input{conclusioni.tex}
 
 \end{document}
