--- a/E3/Latex/introduzione.tex
+++ b/E3/Latex/introduzione.tex
@@ -39,15 +39,15 @@ Seguendo questi requisiti abbiamo realizzato uno schema su carta dell'impianto t
 
 \subsection{Funzionamento dell'impianto da vuoto}
 \paragraph{Creazione del prevuoto\\}
-Il prevuoto, indispensabile per avviare la pompa turbomolecolare, è stato ottenuto avviando semplicemente avviando la pompa rotativa, tenendo chiusa la sola valvola che collega direttamente la camera da vuoto e l'atmosfera.
+Il prevuoto, indispensabile per avviare la pompa turbomolecolare, è stato ottenuto semplicemente avviando la pompa rotativa, tenendo chiusa la sola valvola che collega direttamente la camera da vuoto e l'atmosfera.
 \paragraph{Vuoto in camera\\}
-Per creare il vuoto in camera è necessario prima creare il prevuoto con la pompa rotativa. Una volta raggiunte le condizioni adatte, cioé il sistema è ad una pressione dell'ordine di qualche \si{\Pa}, si chiude la valvola del bypass e si può accendere la pompa turbomolecolare. Infine basta lasciare lavorare il sistema affinché arrivi alla sua pressione limite o alla pressione desiderata. % Non sono sicuro sul vuoto limite della rotativa.
+Per creare il vuoto in camera è necessario prima creare il prevuoto con la pompa rotativa. Una volta raggiunte le condizioni adatte, cioé il sistema è ad una pressione dell'ordine di qualche \si{\Pa}, si chiude la valvola del bypass e si può accendere la pompa turbomolecolare. Infine basta lasciare lavorare il sistema affinché arrivi alla sua pressione limite o alla pressione desiderata.
 \paragraph{Rientro di aria a pressione atmosferica in camera\\}
-Dalla situazione di vuoto in camera, per effettuare il rientro di aria in camera è necessario prima di tutto chiudere la valvola gate, in modo che la pompa turbomolecolare non subisca variazioni di pressione, lasciando che la pompa rotativa aspiri il fondo della pompa turbomolecolare. Quindi basta aprire la valvola che collega la camera da vuoto con l'atmosfera.
-\paragraph{Vuoto in camera con pompa turbomolecolare isolata\\} % non mi piace il titolo
-Per ritornare ad una bassa pressione in camera, dalla situazione descritta nel paragrafo precedente, è necessario chiudere la valvola a fondo della turbo per isolarla completamente. In seguito si deve aprire la valvola del bypass in modo tale da creare il vuoto in camera con la pompa rotativa. Una volta che la pressione segnalata da entrambi i vacuometri Pirani è uguale, si può aprire la valvola a fondo della pompa turbomolecolare e chiudere la valvola del bypass. Le operazioni fin qui descritte vanno eseguite con una certa rapidità per evitare che a fondo della pompa turbomolecolare si crei una zona con pressione troppo elevata. L'ultima operazione è quella di aprire lentamente la valvola gate, in modo da non sforzare la pompa turbomolecolare, per poi lasciare che l'impianto si riporti in condizione di vuoto limite. % da rivedere
+Dalla situazione di vuoto in camera, per effettuare il rientro di aria in camera, mantenendo accesa la pompa turbomolecolare, è necessario prima di tutto chiudere la valvola gate, in modo che la pompa turbomolecolare non si danneggi subendo una brusca variazione di pressione. Mantenendo chiusa la valvola del bypass occorre lasciare che la pompa rotativa aspiri il fondo della pompa turbomolecolare. Quindi basta aprire la valvola che collega la camera da vuoto con l'atmosfera ed effettuare il rientro d'aria in camera.
+\paragraph{Ritorno ad una situazione di alto vuoto in camera.\\}
+Per ritornare ad una bassa pressione in camera, dalla situazione descritta nel paragrafo precedente, è necessario chiudere la valvola a fondo della turbo per isolarla completamente. In seguito si deve aprire la valvola del bypass in modo tale da creare il prevuoto in camera con la pompa rotativa. Una volta che la pressione segnalata da entrambi i vacuometri Pirani è uguale, si può aprire la valvola a fondo della pompa turbomolecolare e chiudere la valvola del bypass. Le operazioni fin qui descritte vanno eseguite con una certa rapidità per evitare che a fondo della pompa turbomolecolare si crei una zona con pressione troppo elevata. L'ultima operazione è quella di aprire lentamente la valvola gate, in modo da non sforzare la pompa turbomolecolare, per poi lasciare che l'impianto raggiunga nuovamente la condizione di vuoto limite.
 \paragraph{Vacuometri a catodo caldo e a catodo freddo\\}
-Si è prestata attenzione all'accensione e allo spegnimento di tali vacuometri onde evitare di provocare danni. Il vacuometro a catodo caldo infatti deve operare al di sotto dei $10^{-4}$ \si{\pascal} affinché non si bruci il filamento al suo interno. Il vacuometro a catodo freddo invee deve operare al di sotto dei $10^{-4}$ \si{\pascal} affinché non si ossidi la superficie interna. $\bigotimes$ % non ho idea di quello che sto dicendo (per il catodo freddo si intende...).
+Durante tutta l'esecuzione dell'esperienza si è prestata attenzione all'accensione e allo spegnimento di tali vacuometri onde evitare di provocare danni. Il vacuometro a catodo caldo infatti deve operare al di sotto dei $10^{-4}$ \si{\pascal} affinché non si bruci il filamento al suo interno. Il vacuometro a catodo freddo invece deve operare al di sotto dei $10^{-4}$ \si{\pascal} affinché non si ossidi la superficie interna.
 
 \subsection{Taratura dei vacuometri Pirani}
 
@@ -56,14 +56,17 @@ della sensibilità dello strumento, specificato nel manuale. Il manuale riporta 
 
 \subsection{Qualche dato}
 
-La pressione da noi raggiunta, come misurata con il vacuometro a catodo caldo, è di circa:
+La pressione in camera ottenuta grazie al solo utilizzo della pompa rotativa è stata di circa:
 
 \begin{equation}
-    P = 6.85 \cdot 10^{-4} \; \si{\pascal}
+    P \,=\, 1.8  \; \si{\pascal}
 \end{equation}
+%
+La pressione limite da noi raggiunta, misurata con il vacuometro a catodo caldo, è di circa:
 
-$\bigotimes$
-% sarebbe meglio aggiungere anche il vuoto limite raggiunto con la sola pompa rotativa, se ce l'abbiamo.
+\begin{equation}
+    P \,=\, 6.85 \cdot 10^{-4} \; \si{\pascal}
+\end{equation}
 
 \begin{figure}[b!]
     \centering
@@ -73,9 +76,3 @@ $\bigotimes$
    turbomolecolare poteva essere isolata dal resto dell'impianto grazie alla valvola gate e alla valvola sul fondo della pompa.}
    \label{fig:schema}
 \end{figure}
-
-% direi che al grafico manca una legenda e dei riferimenti per capire cosa sono
-% le cose attaccate al sistema. per indicare quali sono i vacuometri pirani/a catodo
-% caldo/ a catodo freddo etc etc etc
-
-% continuo a sostenere le cose scritte qua sopra :) che programmino hai usato pasa per fare lo schema?
