--- a/E6/Latex/analisi.tex
+++ b/E6/Latex/analisi.tex
@@ -44,7 +44,7 @@ I risultati sono riportati nelle tabelle in fondo alla sezione di analisi dati.
 
 Dopo aver ottenuto le conduttanze, vogliamo confrontare i valori ricavati con i valori teorici.
 Per ottenere i valori teorici dobbiamo essere a conoscenza del tipo di regime di flusso in cui è stato svolto l'esperimento,
-poichè le formule che permettono di calcolare la conduttanza sono differenti per diversi regimi di flusso.
+poichè le formule che permettono di calcolare la conduttanza sono differenti per i diversi regimi di flusso.
 A questo fine calcoliamo il \emph{numero di Knudsen}, o meglio un indicatore equivalente che risulta più comodo da
 ottenere con i dati in nostro possesso. L'indicatore è il prodotto $\bar{P}d$, dove $\bar{P}$ è la pressione media misurata nel
 tubo e $d$ è il diametro del tubo. Questo indicatore discrimina i regimi di flusso secondo la seguente tabella.
@@ -109,9 +109,13 @@ Otteniamo quindi soltanto 10 valori del numero di Reynolds (i dati sono misurati
 \begin{center}
     \begin{tabular}{c c c c}
         \toprule
-        C & dC & & \\
+        Nr. giri & C & dC & \\
         \midrule
-        & & & \\
+        4 & $6.6372 \cdot 10^{-7}$ & $9.6387 \cdot 10^{-8}$ & \\
+        5 & $2.6187 \cdot 10^{-6}$ & $3.7851 \cdot 10^{-7}$ & \\
+        6 & $1.0252 \cdot 10^{-5}$ & $1.4868 \cdot 10^{-6}$ & \\
+        7 & $3.3973 \cdot 10^{-5}$ & $5.0061 \cdot 10^{-6}$ & \\
+        8 & $8.9041 \cdot 10^{-5}$ & $1.3853 \cdot 10^{-5}$ & \\
         \bottomrule
     \end{tabular}
 \end{center}
