--- a/E6/Latex/analisi.tex
+++ b/E6/Latex/analisi.tex
@@ -11,7 +11,6 @@ immediatamente ai capi del tubo. Indicheremo le pressioni ai due capi come $P_1$
 La valvola a spillo è stata collocata in fondo all'impianto. È stata mantenuta
 aperta la valvola ausiliaria della stessa al fine di evitare problemi con i volumi morti. 
 
-% vuoto limite???
 Dopo aver montato l'impianto abbiamo avviato la pompa rotativa, e aspettato di raggiungere il vuoto limite all'interno
 del tubo. Per fare ciò abbiamo monitorato al PC l'andamento della pressione al capo $P_2$, assicurandoci che la pressione
 si fosse stabilizzata prima di aprire la valvola micrometrica.
@@ -29,7 +28,6 @@ $T = 296 \pm 1 \, \si{\kelvin}$. Entrambe le misure riportano incertezze di riso
 
 \section{Analisi dati}
 
-% qui non si sa se serve fare la media delle medie.... roba assurda lo so
 Vogliamo ora calcolare i valori di conduttanza dei tubi. Poiché abbiamo registrato due volte le pressioni per ogni valore
 di apertura della valvola (una salendo ed una scendendo), dobbiamo prima fare la media tra questi due dati
 
@@ -40,8 +38,7 @@ A noi interessa la differenza di pressione $\Delta P = P_2 - P_1$, che possiamo 
     C = \frac{Q}{\Delta P}
 \end{equation}
 
-I risultati sono riportati nelle tabelle in fondo alla sezione di analisi dati.
-
+I risultati sono riportati nelle tabelle in fondo alla sezione di analisi dati.\\
 Dopo aver ottenuto le conduttanze, vogliamo confrontare i valori ricavati con i valori teorici.
 Per ottenere i valori teorici dobbiamo essere a conoscenza del tipo di regime di flusso in cui è stato svolto l'esperimento,
 poichè le formule che permettono di calcolare la conduttanza sono differenti per i diversi regimi di flusso.
@@ -56,7 +53,7 @@ tubo e $d$ è il diametro del tubo. Questo indicatore discrimina i regimi di flu
         \midrule
         Viscoso & Basso & $\bar{P} d > 0.6$ \\
         Transitorio & Medio & $1.3\cdot10^{-2} \le \bar{P} d \le 0.6$ \\
-        Intermedio & Alto & $\bar{P} d < 1.3\cdot10^{-2}$ \\
+        Intermedio [non Moecolare???] & Alto & $\bar{P} d < 1.3\cdot10^{-2}$ \\
         \bottomrule
     \end{tabular}
 \end{center}
@@ -86,8 +83,21 @@ alla temperatura del laboratorio abbiamo usato un calcolatore online, reperibile
 Il calcolatore ignora il fatto che la pressione in camera non è quella atmosferica. Tuttavia il coefficiente di viscosità
 dipende solo debolemente dalla pressione e quindi trascuriamo l'effetto della pressione.},
 $d$ il diametro della canalizzazione, $R$ la constante dei gas perfetti e $T$ la temperatura.
+Quindi sapendo che in base al valore assunto dal numero di Reynolds il regime di flusso viscoso si suddivide in queste tre categorie:
 
-Il numero di Reynolds dipende solo dal diametro del tubo e dal flusso e non dalla lunghezza o dalle pressioni ai capi.
+\begin{center}
+    \begin{tabular}{l c c}
+        \toprule
+        Regime & Numero di Reynolds \\
+        \midrule
+        Regime Laminare & $Re < 1200$ \\
+        Regime Intermedio & $1200 < Re < 2200$ \\
+        Regime Turbolento & $Re > 2200$ \\
+        \bottomrule
+    \end{tabular}
+\end{center}
+
+e ricordando che il numero di Reynolds dipende solo dal diametro del tubo e dal flusso e non dalla lunghezza o dalle pressioni ai capi, possiamo classificare il regime di flusso viscoso nel quele abbiamo svolto l'esperienza:
 Otteniamo quindi soltanto 10 valori del numero di Reynolds (i dati sono misurati in \si{\kg\per\m\per\s}):
 
 \begin{center}
@@ -105,17 +115,77 @@ Otteniamo quindi soltanto 10 valori del numero di Reynolds (i dati sono misurati
     \end{tabular}
 \end{center}
 
-\textbf{Tubo 8000x4} \\
+In base hai valori del numero di Reynolds da noi ottenuti possiamo osservare che tutte le nostre misure si sono svolte in un regime di flusso viscoso laminare. Grazie a questo risultato siamo quindi in grado di calcolare il valore teorico che dovrebbe avere la conduttanza per i raccordi da noi usati.
+Ricordiamoci che in regime di flusso viscoso laminare la conduttanza teorica ha la seguente espressione:
+
+\begin{equation}
+    C\ped{lam} \,=\, 1350\,\frac{\bar{P}d^4}{l}
+\end{equation}
+
+Quindi per concludere riporteremo per ogni tubo da noi esaminato una tabella riportante il valore sperimentale della conduttanza, la relativa incertezza e il valore teorica di quest'ultima e discuteremo brevemente i risultati da noi ottenuti.
+
+[NELLE TABELLE NON HO MESSO LE UNITÀ DI NISURA E POI LE MISURE SONO INSERITE BRUTALMENTE, GUARDARE CON PASA PER IL NUMERO DI CIFRE SIGNIFICATIVE. SORRY SONO INUTILE:(]
+
+\textbf{Tubo 8000x4 mm} \\
 \begin{center}
-    \begin{tabular}{c c c c}
+    \begin{tabular}{c c c c c}
         \toprule
-        Nr. giri & C & dC & \\
+        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
         \midrule
-        4 & $6.6372 \cdot 10^{-7}$ & $9.6387 \cdot 10^{-8}$ & \\
-        5 & $2.6187 \cdot 10^{-6}$ & $3.7851 \cdot 10^{-7}$ & \\
-        6 & $1.0252 \cdot 10^{-5}$ & $1.4868 \cdot 10^{-6}$ & \\
-        7 & $3.3973 \cdot 10^{-5}$ & $5.0061 \cdot 10^{-6}$ & \\
-        8 & $8.9041 \cdot 10^{-5}$ & $1.3853 \cdot 10^{-5}$ & \\
+        4 & Transitorio & $6.6372 \cdot 10^{-7}$ & $9.6387 \cdot 10^{-8}$ & $4.0867 \cdot 10^{-6}$ \\
+        5 & Transitorio & $2.6187 \cdot 10^{-6}$ & $3.7851 \cdot 10^{-7}$ & $5.0695 \cdot 10^{-6}$ \\
+        6 & Viscoso & $1.0252 \cdot 10^{-5}$ & $1.4868 \cdot 10^{-6}$ & $1.2172 \cdot 10^{-5}$ \\
+        7 & Viscoso & $3.3973 \cdot 10^{-5}$ & $5.0061 \cdot 10^{-6}$ & $4.2660 \cdot 10^{-5}$ \\
+        8 & Viscoso & $8.9041 \cdot 10^{-5}$ & $1.3853 \cdot 10^{-5}$ & $1.1275 \cdot 10^{-4}$ \\
         \bottomrule
     \end{tabular}
 \end{center}
+
+\textbf{Tubo 800x4 mm} \\
+\begin{center}
+    \begin{tabular}{c c c c c}
+        \toprule
+        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        \midrule
+        4 & Transitorio & $4.5369 \cdot 10^{-6}$ & $6.9837 \cdot 10^{-7}$ & $6.5988 \cdot 10^{-6}$ \\
+        5 & Transitorio & $1.4268 \cdot 10^{-5}$ & $2.1533 \cdot 10^{-6}$ & $1.0076 \cdot 10^{-5}$ \\
+        6 & Transitorio & $3.9427 \cdot 10^{-5}$ & $6.0105 \cdot 10^{-6}$ & $3.4668 \cdot 10^{-5}$ \\
+        7 & Viscoso & $1.4588 \cdot 10^{-4}$ & $2.4544 \cdot 10^{-5}$ & $1.2420 \cdot 10^{-4}$ \\
+        8 & Viscoso & $3.5455 \cdot 10^{-4}$ & $7.0765 \cdot 10^{-5}$ & $4.1040 \cdot 10^{-4}$ \\
+        \bottomrule
+    \end{tabular}
+\end{center}
+
+\textbf{Tubo 8000x2.5 mm} \\
+\begin{center}
+    \begin{tabular}{c c c c c}
+        \toprule
+        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        \midrule
+        4 & Transitorio & $3.1873 \cdot 10^{-7}$ & $4.5748 \cdot 10^{-8}$ & $1.2640 \cdot 10^{-6}$ \\
+        5 & Viscoso & $1.1557 \cdot 10^{-6}$ & $1.6527 \cdot 10^{-7}$ & $1.7122 \cdot 10^{-6}$ \\
+        6 & Viscoso & $3.9668 \cdot 10^{-6}$ & $5.6652 \cdot 10^{-7}$ & $4.6588 \cdot 10^{-6}$ \\
+        7 & Viscoso & $1.5039 \cdot 10^{-5}$ & $2.1674 \cdot 10^{-6}$ & $1.4098 \cdot 10^{-5}$ \\
+        8 & Viscoso & $1.4673 \cdot 10^{-5}$ & $2.1082 \cdot 10^{-6}$ & $9.0374 \cdot 10^{-5}$ \\
+        \bottomrule
+    \end{tabular}
+\end{center}
+
+\textbf{Tubo 800x2.5 mm} \\
+\begin{center}
+    \begin{tabular}{c c c c c}
+        \toprule
+        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        \midrule
+        4 & Transitorio & $1.9624 \cdot 10^{-6}$ & $2.8576 \cdot 10^{-7}$ & $2.1044 \cdot 10^{-6}$ \\
+        5 & Transitorio & $5.0064 \cdot 10^{-6}$ & $7.2104 \cdot 10^{-7}$ & $4.0259 \cdot 10^{-6}$ \\
+        6 & Transitorio & $1.4855 \cdot 10^{-5}$ & $2.1570 \cdot 10^{-6}$ & $1.2846 \cdot 10^{-5}$ \\
+        7 & Viscoso & $4.6792 \cdot 10^{-5}$ & $7.0025 \cdot 10^{-6}$ & $4.8615 \cdot 10^{-5}$ \\
+        8 & Viscoso & $1.3087 \cdot 10^{-4}$ & $2.1278 \cdot 10^{-5}$ & $1.2590 \cdot 10^{-4}$ \\
+        \bottomrule
+    \end{tabular}
+\end{center}
+
+Qunidi in base hai dati da noi ottenuti possiamo notare come i valori della conduttanza corrispondenti a 4, 5 e in alcuni casi anche a 6 giri della valvola a spillo siano quelli meno concordi con i valori teorici. Questo è dovuto al fatto che il regime  di flusso in queste situazioni non era viscoso, ma era transitorio. Pertanto come già accennato in precedenza non possediamo una formula specifica per valutare la conduttanza in tale regime (flusso transitorio) ed è per questo motivo che i valori non sono del tutto compatibili, in quanto il valore sperimentale restituisce un valore della conduttanza in pesenza di un regime di flusso transitorio mentre il valore teorico ricavato è valido/corretto nelle ipotesi in cui il regime di flusso sia viscoso e laminare. Infatti anche per lo stesso regime di flusso viscoso non si dispone di una formula che permetta di calcolare la condutanza se non nel caso di flusso viscoso laminare. 
+
+
